[package]
name = "td_3"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
glam = { version = "0.30"}
bevy_rapier3d ={ version = "*", features = [ "simd-stable", "debug-render-3d" ]}

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3