[package]
name = "td_3"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["bevy_mesh_picking_backend"] }
bevy_picking = { version = "0.16.0"}
glam = { version = "0.30.3"}
# bevy_rapier3d ={ version = "*", features = [ "simd-stable", "debug-render-3d" ]}
bevy-inspector-egui = {version = "0.31.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
serde_with ={ version = "3.12.0" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
